# spending-track

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  debug_search.py  fix_ifd.py  fix_ifd_merchants.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f3677ed61015_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: ai_insights.py  analytics.py  auth.py  expenses.py  invoices.py
backend/app/core/: ai_client.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  expense.py  invoice.py  user.py
backend/app/scripts/: import_existing_invoices.py
backend/app/services/: analytics_engine.py  expense_categorizer.py  google_oauth.py  invoice_parser.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analytics/: layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/expenses/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: auth-guard.tsx  dashboard-nav.tsx  privacy-toggle.tsx  quick-stats.tsx  recent-transactions.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/charts/: category-chart.tsx  spending-chart.tsx
frontend/src/components/providers/: query-provider.tsx
frontend/src/types/: index.ts
